# evalforge

./: .dockerignore  .env.example  .gcloudignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.api  Dockerfile.deduplication  Dockerfile.extraction  Dockerfile.service  LICENSE  README.md  docker-compose.yml  firebase.json  firestore.indexes.json  pyproject.toml
.github/workflows/: live_gemini_integration_tests.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
datadog-exports/: Approval_Queue_app_builder_dashboard.json
docs/: ENTERPRISE_ROADMAP.md  app-builder-setup.md  architecture.mmd  failure_queue.md  ingestion.md
infra/: scheduler.yaml
scripts/: bootstrap_firestore.py  bootstrap_gcp.sh  create_test_suggestions.py  deploy.sh  deploy_api.sh  deploy_deduplication.sh  deploy_extraction_scheduler.sh  deploy_metrics_publisher.sh  deploy_service.sh  evaluate_failure_pattern_extraction.py  generate_llm_trace_samples.py  run_extraction_once.sh
scripts/common/: README.md  load_env.sh
specs/: CLAUDE.md
specs/001-capture-datadog-failures/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-extract-failure-patterns/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-suggestion-deduplication/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-eval-test-case-generator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-guardrail-generation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-runbook-generation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-datadog-dashboard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-approval-workflow-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: conftest.py
(+121 files in other folders)
