[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "evalforge"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
  "datadog-api-client",
  "fastapi",
  "google-cloud-firestore",
  "google-cloud-secret-manager",
  "tenacity",
]

[project.optional-dependencies]
dev = [
  "httpx",
  "pytest",
  "pyyaml",
  "ddtrace",
]

[tool.pytest.ini_options]
markers = [
    "integration: Integration tests that hit external services",
    "live: Live tests that require credentials and external services",
]
