[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "evalforge"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
  "requests",
  "fastapi",
  "uvicorn",
  "google-cloud-firestore",
  "google-cloud-secret-manager",
  "google-genai==1.0.0",
  "tenacity",
  "pydantic==2.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx",
  "pytest",
  "pytest-timeout",
  "pyyaml",
  "ddtrace",
  "responses",
]

[tool.pytest.ini_options]
markers = [
    "integration: Integration tests that hit external services",
    "live: Live tests that require credentials and external services",
]
